# refact

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: agent_engine_build.yml  agent_engine_release.yml  agent_gui_build.yml  plugin_intellij_build.yml  plugin_intellij_release.yml  plugin_vscode_build.yml  plugin_vscode_publish.yml
docs/: README.md  astro.config.mjs  package.json
docs/.astro/: types.d.ts
docs/src/content/docs/: byok.md  faq.md  index.mdx  privacy.md  supported-models.md
plugins/vscode/src/: sidebar.ts
refact-agent/engine/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
refact-agent/engine/crates/refact-buddy-core/: Cargo.toml
refact-agent/engine/crates/refact-buddy-core/src/: autonomous_workflows.rs  conversation_ledger.rs  lib.rs  queue.rs  runtime_queue.rs  snapshot.rs  state.rs  types.rs
refact-agent/engine/crates/refact-file-edit-core/: Cargo.toml
refact-agent/engine/crates/refact-files/: Cargo.toml
refact-agent/engine/crates/refact-files/src/: correction_cache.rs  file_filter.rs  lib.rs  path_utils.rs
refact-agent/engine/crates/refact-git/: Cargo.toml
refact-agent/engine/crates/refact-git/src/: lib.rs  operations.rs
refact-agent/engine/crates/refact-integrations/: Cargo.toml
refact-agent/engine/crates/refact-integrations/src/: browser_actions.rs  browser_locators.rs  browser_models.rs  browser_types.rs  lib.rs  sessions.rs  utils.rs  yaml_schema.rs
refact-agent/engine/crates/refact-integrations/src/mcp/: mcp_metrics.rs  mcp_naming.rs  mcp_path_resolution.rs  mod.rs
refact-agent/engine/crates/refact-llm/: Cargo.toml
refact-agent/engine/crates/refact-llm/src/: canonical.rs  embedding_retry.rs  lib.rs  openai_endpoint.rs  provider_quirks.rs
refact-agent/engine/crates/refact-llm/src/adapters/: anthropic.rs  claude_code_compat.rs  openai_chat.rs  openai_responses.rs
refact-agent/engine/crates/refact-scratchpads/: Cargo.toml
refact-agent/engine/crates/refact-scratchpads/src/: code_completion_fim.rs  completion_cache.rs  completon_rag.rs  lib.rs  multimodality.rs  scratchpad_abstract.rs  scratchpad_utils.rs
refact-agent/engine/crates/refact-tool-api/: Cargo.toml
refact-agent/engine/crates/refact-voice/: Cargo.toml
refact-agent/engine/crates/refact-voice/src/: audio_decode.rs  lib.rs  models.rs  transcribe.rs  types.rs
refact-agent/engine/python_binding_and_cmdline/refact/: cli_main.py  cli_settings.py
refact-agent/engine/src/: app_state.rs  background_tasks.rs  call_validation.rs  completion_cache.rs  completion_presets.json  custom_error.rs  embedding_presets.json  fetch_embedding.rs  file_filter.rs  files_blocklist.rs  files_correction.rs  files_correction_cache.rs  files_in_jsonl.rs  files_in_workspace.rs  forward_to_hf_endpoint.rs  forward_to_openai_endpoint.rs  fuzzy_search.rs  global_context.rs  http.rs  indexing_utils.rs  json_utils.rs  knowledge_index.rs  lib.rs  lsp.rs  main.rs  memories.rs  nicer_logs.rs  privacy.rs  restream.rs  scratchpad_abstract.rs  subchat.rs  tokens.rs  trajectory_memos.rs
refact-agent/engine/src/agentic/: compress_trajectory.rs  generate_code_edit.rs  generate_commit_message.rs  generate_follow_up_message.rs  mod.rs  mode_transition.rs
refact-agent/engine/src/agents/: spawn.rs  tests.rs
refact-agent/engine/src/ast/: ast_db.rs  ast_indexer_thread.rs  ast_parse_anything.rs  ast_structs.rs  chunk_utils.rs  file_splitter.rs  mod.rs  parse_common.rs  parse_python.rs
refact-agent/engine/src/at_commands/: at_ast_definition.rs  at_ast_reference.rs  at_commands.rs  at_file.rs  at_knowledge.rs  at_search.rs  at_tree.rs  at_web.rs  execute_at.rs  mod.rs
refact-agent/engine/tests/: test02_completion_with_rag.py  test_background_agents.py  test_background_notifications_e2e.py  test_hidden_roles_e2e.py  test_knowledge_ops.py  test_pty_stdin_e2e.py  test_scheduler_e2e.py  test_task_schema.rs  test_tasks_storage.rs  test_tasks_system.rs
refact-agent/engine/tools/: update_models_dev_snapshot.py
refact-agent/gui/: AGENTS.md  node_modules  package-lock.json  package.json
(+1147 files in other folders)
