[package]
name = "refact-buddy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
refact-ext = { path = "../refact-ext" }
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.31"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.8.1"
