[package]
name = "refact-files"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
dunce = "1.0.5"
glob = "0.3.1"
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
