[package]
name = "refact-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
refact-core = { path = "../refact-core" }
refact-chat-history = { path = "../refact-chat-history" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
lazy_static.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "charset", "http2"] }
rand = "0.8.5"
sha2 = "0.10.8"
uuid.workspace = true
