[package]
name = "refact-voice"
version = "0.1.0"
edition = "2021"

[features]
default = []
voice = [
    "dep:base64",
    "dep:dirs",
    "dep:futures",
    "dep:reqwest",
    "dep:rubato",
    "dep:symphonia",
    "dep:symphonia-bundle-mp3",
    "dep:tracing",
    "dep:whisper-rs",
]

[dependencies]
base64 = { version = "0.22.1", optional = true }
dirs = { version = "5.0", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "stream", "rustls", "charset", "http2"], optional = true }
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true, optional = true }
whisper-rs = { version = "0.12", optional = true }
symphonia = { version = "0.5", default-features = false, features = ["wav", "ogg", "pcm", "vorbis"], optional = true }
symphonia-bundle-mp3 = { version = "0.5", optional = true }
rubato = { version = "0.15", optional = true }
